--- a/Todo/Source/Base.lproj/Home.storyboard
+++ b/Todo/Source/Base.lproj/Home.storyboard
@@ -224,6 +224,50 @@
             </objects>
             <point key="canvasLocation" x="-494" y="548"/>
         </scene>
+        <!--Side Menu Navigation-->
+        <scene sceneID="lB5-Cg-LwI">
+            <objects>
+                <navigationController id="WEI-l6-e5z" customClass="SideMenuNavigation" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gUd-cv-XwE">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="kIY-KM-8ly" kind="relationship" relationship="rootViewController" id="8s3-Fx-3bX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4qq-2C-5RE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="425" y="-177"/>
+        </scene>
+        <!--Side Menu View Controller-->
+        <scene sceneID="mMJ-hi-DDt">
+            <objects>
+                <viewController storyboardIdentifier="SideMenuViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="kIY-KM-8ly" customClass="SideMenuViewController" customModule="Todo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NYO-UP-UWo">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oDF-zO-gX3">
+                                <rect key="frame" x="183" y="461" width="48.5" height="28.5"/>
+                                <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="20"/>
+                                <color key="textColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="5aN-CX-3rh"/>
+                        <color key="backgroundColor" red="0.97647058823529409" green="0.96078431372549022" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="oDF-zO-gX3" firstAttribute="centerX" secondItem="5aN-CX-3rh" secondAttribute="centerX" id="qOa-At-zsy"/>
+                            <constraint firstItem="oDF-zO-gX3" firstAttribute="centerY" secondItem="5aN-CX-3rh" secondAttribute="centerY" id="vfE-tP-1ag"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="4kx-Yo-kDb"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZUr-T5-MoI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1142.0289855072465" y="-177.45535714285714"/>
+        </scene>
         <!--Status View Controller-->
         <scene sceneID="OfW-ol-7bE">
             <objects>
@@ -307,7 +351,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cOt-vs-dS9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="258" y="-177"/>
+            <point key="canvasLocation" x="1657" y="635"/>
         </scene>
         <!--Edit Todo List View Controller-->
         <scene sceneID="RGf-d1-SEt">
@@ -484,7 +528,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CTG-77-MSU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="302.17391304347831" y="547.76785714285711"/>
+            <point key="canvasLocation" x="333" y="358"/>
         </scene>
     </scenes>
     <resources>
