--- a/Todo/Source/Main/AddTodoListTableViewCell.xib
+++ b/Todo/Source/Main/AddTodoListTableViewCell.xib
@@ -17,14 +17,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="W7s-9J-1JV">
-                        <rect key="frame" x="20" y="17" width="367" height="14"/>
+                        <rect key="frame" x="20" y="16" width="367" height="16"/>
                         <color key="tintColor" red="0.23137254900000001" green="0.20000000000000001" blue="0.1843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <nil key="textColor"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="0.0"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
                         <textInputTraits key="textInputTraits"/>
                     </textField>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uys-2y-NWG">
-                        <rect key="frame" x="20" y="34" width="367" height="2"/>
+                        <rect key="frame" x="20" y="35" width="367" height="2"/>
                         <color key="backgroundColor" red="0.1176470588" green="0.1176470588" blue="0.1215686275" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="2" id="uwV-hh-S23"/>
