--- a/Todo/Source/Base.lproj/Home.storyboard
+++ b/Todo/Source/Base.lproj/Home.storyboard
@@ -59,41 +59,12 @@
                                     <constraint firstAttribute="width" secondItem="ini-Sb-wT1" secondAttribute="height" id="7yE-Ro-OY0"/>
                                 </constraints>
                             </imageView>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AqW-1m-RXw">
-                                <rect key="frame" x="0.0" y="508.5" width="414" height="313.5"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kPU-DG-Naf">
-                                        <rect key="frame" x="0.0" y="5" width="414" height="800"/>
-                                        <subviews>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="BfX-WU-2bX">
-                                                <rect key="frame" x="20" y="5" width="374" height="775"/>
-                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" priority="999" constant="780" id="kjM-yr-Deo"/>
-                                                </constraints>
-                                                <color key="separatorColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                            </tableView>
-                                        </subviews>
-                                        <constraints>
-                                            <constraint firstItem="BfX-WU-2bX" firstAttribute="top" secondItem="kPU-DG-Naf" secondAttribute="top" constant="5" id="FQj-tI-McH"/>
-                                            <constraint firstAttribute="bottom" secondItem="BfX-WU-2bX" secondAttribute="bottom" constant="20" id="VD4-5b-YJN"/>
-                                            <constraint firstAttribute="height" constant="800" id="aWK-EB-q8w"/>
-                                            <constraint firstAttribute="trailing" secondItem="BfX-WU-2bX" secondAttribute="trailing" constant="20" id="sHw-Ne-4Uo"/>
-                                            <constraint firstItem="BfX-WU-2bX" firstAttribute="leading" secondItem="kPU-DG-Naf" secondAttribute="leading" constant="20" id="uxS-No-GJG"/>
-                                        </constraints>
-                                    </view>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="kPU-DG-Naf" firstAttribute="top" secondItem="bWM-Ry-ycP" secondAttribute="top" constant="5" id="JlW-WP-5cB"/>
-                                    <constraint firstItem="kPU-DG-Naf" firstAttribute="trailing" secondItem="bWM-Ry-ycP" secondAttribute="trailing" id="SDR-eJ-2A3"/>
-                                    <constraint firstItem="kPU-DG-Naf" firstAttribute="bottom" secondItem="bWM-Ry-ycP" secondAttribute="bottom" id="Vgs-HY-RKF"/>
-                                    <constraint firstItem="kPU-DG-Naf" firstAttribute="width" secondItem="A9c-Yd-FYY" secondAttribute="width" id="XWn-mQ-I5N"/>
-                                    <constraint firstItem="kPU-DG-Naf" firstAttribute="leading" secondItem="bWM-Ry-ycP" secondAttribute="leading" id="ceN-Af-obZ"/>
-                                </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="bWM-Ry-ycP"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="A9c-Yd-FYY"/>
-                            </scrollView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="BfX-WU-2bX">
+                                <rect key="frame" x="20" y="528.5" width="374" height="278.5"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="separatorColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </tableView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="right_image" translatesAutoresizingMaskIntoConstraints="NO" id="tyr-yc-Mu9">
                                 <rect key="frame" x="365" y="119" width="29" height="29"/>
                                 <constraints>
@@ -118,8 +89,11 @@
                                     <constraint firstAttribute="width" secondItem="NjA-0A-Qhe" secondAttribute="height" id="Cas-pR-cna"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="otQ-4o-RhX">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Todo Result" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="otQ-4o-RhX">
                                 <rect key="frame" x="20" y="827" width="374" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="c0j-Ia-8at"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -129,20 +103,19 @@
                         <color key="backgroundColor" red="0.97647058823529409" green="0.96078431372549022" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="Lmq-5D-hpd" firstAttribute="bottom" secondItem="otQ-4o-RhX" secondAttribute="bottom" constant="15" id="2vP-Ph-48X"/>
+                            <constraint firstItem="otQ-4o-RhX" firstAttribute="top" secondItem="BfX-WU-2bX" secondAttribute="bottom" constant="20" id="2vP-Ph-48X"/>
                             <constraint firstItem="cnI-yZ-i21" firstAttribute="leading" secondItem="YW2-rB-d2V" secondAttribute="trailing" constant="8" id="3eY-9C-uCn"/>
                             <constraint firstItem="tyr-yc-Mu9" firstAttribute="leading" secondItem="TQy-Vb-fAq" secondAttribute="trailing" constant="5" id="45Z-S0-SNg"/>
+                            <constraint firstItem="Lmq-5D-hpd" firstAttribute="trailing" secondItem="BfX-WU-2bX" secondAttribute="trailing" constant="20" id="663-Fh-JbV"/>
                             <constraint firstItem="cnI-yZ-i21" firstAttribute="width" secondItem="3zS-PP-2qs" secondAttribute="width" multiplier="0.06" id="8DF-sA-dE4"/>
                             <constraint firstItem="ywG-AL-8Oj" firstAttribute="top" secondItem="YW2-rB-d2V" secondAttribute="bottom" constant="15" id="BlY-l0-1zO"/>
                             <constraint firstItem="Lmq-5D-hpd" firstAttribute="trailing" secondItem="otQ-4o-RhX" secondAttribute="trailing" constant="20" id="Fuq-86-Q3Y"/>
                             <constraint firstItem="Xm4-tj-m5h" firstAttribute="centerY" secondItem="ini-Sb-wT1" secondAttribute="centerY" id="I5R-TU-oiu"/>
                             <constraint firstItem="Xm4-tj-m5h" firstAttribute="width" secondItem="ini-Sb-wT1" secondAttribute="width" id="NHM-zE-b34"/>
                             <constraint firstItem="tyr-yc-Mu9" firstAttribute="centerY" secondItem="cnI-yZ-i21" secondAttribute="centerY" id="PZm-ka-SCD"/>
-                            <constraint firstItem="Lmq-5D-hpd" firstAttribute="trailing" secondItem="AqW-1m-RXw" secondAttribute="trailing" id="Pmq-ao-qOp"/>
                             <constraint firstItem="NjA-0A-Qhe" firstAttribute="leading" secondItem="Xm4-tj-m5h" secondAttribute="trailing" constant="10" id="QA8-64-BQ6"/>
                             <constraint firstItem="tyr-yc-Mu9" firstAttribute="width" secondItem="ini-Sb-wT1" secondAttribute="width" id="R5K-3k-DOQ"/>
                             <constraint firstItem="Lmq-5D-hpd" firstAttribute="trailing" secondItem="tyr-yc-Mu9" secondAttribute="trailing" constant="20" id="RJL-pW-mnA"/>
-                            <constraint firstItem="Lmq-5D-hpd" firstAttribute="bottom" secondItem="AqW-1m-RXw" secondAttribute="bottom" constant="40" id="SAU-ok-Lpg"/>
                             <constraint firstItem="Lmq-5D-hpd" firstAttribute="trailing" secondItem="ywG-AL-8Oj" secondAttribute="trailing" constant="20" id="SSR-vq-ifg"/>
                             <constraint firstItem="cnI-yZ-i21" firstAttribute="height" secondItem="YW2-rB-d2V" secondAttribute="height" multiplier="1.2" id="aNM-xD-w0X"/>
                             <constraint firstItem="TQy-Vb-fAq" firstAttribute="centerY" secondItem="tyr-yc-Mu9" secondAttribute="centerY" id="bGc-en-6GQ"/>
@@ -151,13 +124,14 @@
                             <constraint firstItem="NjA-0A-Qhe" firstAttribute="width" secondItem="ini-Sb-wT1" secondAttribute="width" id="ez6-2M-W5n"/>
                             <constraint firstItem="NjA-0A-Qhe" firstAttribute="centerY" secondItem="ini-Sb-wT1" secondAttribute="centerY" id="flS-L7-hOS"/>
                             <constraint firstItem="ini-Sb-wT1" firstAttribute="leading" secondItem="NjA-0A-Qhe" secondAttribute="trailing" constant="10" id="gdT-Jo-byP"/>
+                            <constraint firstItem="BfX-WU-2bX" firstAttribute="leading" secondItem="Lmq-5D-hpd" secondAttribute="leading" constant="20" id="gdu-Id-zjV"/>
                             <constraint firstItem="ini-Sb-wT1" firstAttribute="top" secondItem="Lmq-5D-hpd" secondAttribute="top" constant="20" id="gvD-27-ALk"/>
                             <constraint firstItem="otQ-4o-RhX" firstAttribute="leading" secondItem="Lmq-5D-hpd" secondAttribute="leading" constant="20" id="irM-3y-Zlj"/>
                             <constraint firstItem="cnI-yZ-i21" firstAttribute="centerY" secondItem="YW2-rB-d2V" secondAttribute="centerY" id="jXD-V3-stv"/>
-                            <constraint firstItem="AqW-1m-RXw" firstAttribute="leading" secondItem="Lmq-5D-hpd" secondAttribute="leading" id="lP1-pk-aHu"/>
                             <constraint firstItem="YW2-rB-d2V" firstAttribute="top" secondItem="ini-Sb-wT1" secondAttribute="bottom" constant="30" id="mMo-ck-oBJ"/>
                             <constraint firstItem="ywG-AL-8Oj" firstAttribute="leading" secondItem="Lmq-5D-hpd" secondAttribute="leading" constant="20" id="moX-cQ-Y4b"/>
-                            <constraint firstItem="AqW-1m-RXw" firstAttribute="top" secondItem="ywG-AL-8Oj" secondAttribute="bottom" id="raE-Ob-QJm"/>
+                            <constraint firstItem="BfX-WU-2bX" firstAttribute="top" secondItem="ywG-AL-8Oj" secondAttribute="bottom" constant="20" id="ncr-n0-HkD"/>
+                            <constraint firstItem="Lmq-5D-hpd" firstAttribute="bottom" secondItem="otQ-4o-RhX" secondAttribute="bottom" constant="15" id="tid-ix-eS0"/>
                             <constraint firstItem="TQy-Vb-fAq" firstAttribute="width" secondItem="tyr-yc-Mu9" secondAttribute="width" id="u95-jg-IDl"/>
                             <constraint firstItem="ini-Sb-wT1" firstAttribute="width" secondItem="3zS-PP-2qs" secondAttribute="width" multiplier="0.07" id="yAz-kB-akp"/>
                         </constraints>
@@ -173,9 +147,7 @@
                         <outlet property="PlusBoxImageView" destination="Xm4-tj-m5h" id="Hky-tO-fYf"/>
                         <outlet property="RightArrowImageView" destination="tyr-yc-Mu9" id="ohb-5g-9Er"/>
                         <outlet property="TodoListTableView" destination="BfX-WU-2bX" id="XfS-88-Jqs"/>
-                        <outlet property="TodoListTableViewHeight" destination="kPU-DG-Naf" id="wSa-SW-niI"/>
                         <outlet property="TodoResultLabel" destination="otQ-4o-RhX" id="fRh-6a-Wrh"/>
-                        <outlet property="TodoScrollView" destination="AqW-1m-RXw" id="qBr-kU-0wZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YDf-Yl-vBn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -252,6 +224,13 @@
                                 <rect key="frame" x="183" y="461" width="48.5" height="28.5"/>
                                 <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="20"/>
                                 <color key="textColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="gkgkgk" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eKC-Gb-mVI">
+                                <rect key="frame" x="159" y="297" width="56" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
